# swash-mesh-creation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: tutorial.md
examples/1d_wave_channel/: INPUT  README.md  bathymetry.txt  bathymetry_with_breakwater.txt  gauge_positions.txt
examples/2d_simple_shore/: INPUT  INPUT_mesh  INPUT_regular  README.md  bathymetry.txt  gauge_positions.txt  porosity.txt
examples/2d_simple_shore_2/: INPUT  gauge_positions.txt  porosity.txt
examples/baie-des-bacon/: INPUT  combined_topo_bathy.tif
examples/diagonal_shore/: INPUT  bathymetry.txt
examples/diagonal_shore_with_breakwaters/: INPUT  bathymetry.txt  porosity.txt
examples/straight_shore/: INPUT
examples/straight_shore_regular_waves/: INPUT  bathymetry.txt
examples/straight_shore_with_breakwaters/: INPUT  bathymetry.txt
examples/straight_shore_with_breakwaters_regular_waves/: INPUT  porosity.txt
scripts/: INPUT  INPUT_template  convert_animation_to_video.py  create_input_files.py  create_input_files_from_tif.py  create_synthetic_bathymetry.py  parse_swash_outputs.py
src/: __init__.py  cli.py  main.py  mesh.py  swash.py  triangle.py  wavelength.py
src/utils/: __init__.py  plotting.py
tests/fixtures/: __init__.py  cli.py
tests/unit/: test_cli.py  test_main.py
