[project]
name = "mesh_creation"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Antoine Lefebvre-Brossard", email = "antoinelb@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gmsh>=4.14.0",
    "jinja2>=3.1.6",
    "kaleido>=1.0.0",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "rasterio>=1.4.3",
    "scipy>=1.16.0",
    "typer>=0.16.0",
]

[project.scripts]
swash-mesh = "src.cli:run_cli"
sm = "src.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.12",
    "ty>=0.0.1a8",
]

[tool.black]
line_length = 79
target-version = ['py313']

[tool.isort]
profile = "black"
src_paths = ["src"]
